--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^15.1.0",
     "devextreme": "^22.2.4",
     "devextreme-angular": "^22.2.4",
+    "devextreme-aspnet-data-nojquery": "^2.9.1",
     "devextreme-schematics": "^1.5.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
